Fix whitespace on mobile

--- a/css/_metrics.scss
+++ b/css/_metrics.scss
@@ -5,7 +5,7 @@
 
 	margin: auto #{-$baseMargin};
 
-	@include respond(small) {
+	@include respond(medium) {
 		@include flex-direction(column);
 
 		margin: 0;
@@ -15,7 +15,7 @@
 		@include flex-basis(0%);
 		@include flex-grow(1);
 
-		@include respondMinExclude(small) {
+		@include respondMinExclude(medium) {
 			width: 16.66666667%;
 
 			// @deprecated
@@ -31,7 +31,7 @@
 		padding: 4px;
 		border-radius: 4px;
 	}
-	
+
 	&__caption {
 		text-align: center;
 		padding: 9px;
