--- a/css/_unsorted.scss
+++ b/css/_unsorted.scss
@@ -93,3 +93,11 @@
 .language-switcher-button:hover {
 	opacity: .9;
 }
+
+.row {
+	margin: 0;
+}
+
+.home-wrapper {
+	padding: 0;
+}
